<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_EnableAllAxes" Id="{3272f98f-ac12-4d57-b438-2870481e66bf}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_EnableAllAxes EXTENDS ST_MsgToPLC:
STRUCT
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>