<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="FB_ShutterSM" Id="{bb014c99-9246-4485-a45b-7048ac4294d5}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ShutterSM
VAR_IN_OUT
	stAxis  	: ARRAY [GVL.cXP .. GVL.cXM] OF ST_AxisGroup;
END_VAR
VAR_INPUT
	//commands
	eCommand			: E_Commands;
	stCalibrate			: ST_Calibrate;
	stChangeAxisEnable	: ST_ChangeAxisEnable;
	stChangeBrakeState	: ST_ChangeBrakeState;
	stClearAllFaults	: ST_ClearAllFaults;
	stClearAxisFaults	: ST_ClearAxisFaults;
	stCloseShutter		: ST_CloseShutter;
	stDisableAllAxes	: ST_DisableAllAxes;
	stEnableAllAxes		: ST_EnableAllAxes;
	stGoToProd			: ST_GoToProd;
	stHomeAxis			: ST_HomeAxis;
	stMoveAxisAbsolute	: ST_MoveAxisAbsolute;
	stMoveAxisRelative	: ST_MoveAxisRelative;
	stOpenShutter		: ST_OpenShutter;
	stReset				: ST_Reset;
	stTakeExposure		: ST_TakeExposure;
END_VAR
VAR_OUTPUT
	bCalibDone			: BOOL;
	bMotionDone			: BOOL;
	stOutCalibDone		: ST_CalibDone;
	stOutError			: ST_Error;
	stOutTimer			: ST_Timer;
	nSMState			: DINT;
END_VAR
VAR
	//state-machine
	eCurrentState	: E_StatesTop;
	eNextState		: E_StatesTop;
	fbEnabled		: FB_StateEnabled;
	fbDisabled		: FB_StateDisabled;
	bLowerEntry		: BOOL;

	//used in homeShutter Action
	fbHomeDelay : TON;

END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* Top state of the shutter state machine *)
IF eCurrentState <> eNextState THEN
	bLowerEntry := TRUE;
END_IF

eNextState := E_StatesTop.Enabled;
eCurrentState := eNextState;

(*Start of state machine*)
CASE eCurrentState OF
	E_StatesTop.Disabled: 
		fbDisabled(
			stAxis 		:= stAxis, 
			btopEntry	:=bLowerEntry,
			nSMState	=> nSMState);

	E_StatesTop.Enabled:
		fbEnabled(
			//inputs
			stAxis 				:= stAxis, 
			bTopEntry 			:= bLowerEntry,
			eCommand			:= eCommand,
			stCalibrate			:= stCalibrate,
			stChangeAxisEnable	:= stChangeAxisEnable,
			stChangeBrakeState	:= stChangeBrakeState,
			stClearAllFaults	:= stClearAllFaults,
			stClearAxisFaults	:= stClearAxisFaults,
			stCloseShutter		:= stCloseShutter,
			stDisableAllAxes	:= stDisableAllAxes,
			stEnableAllAxes		:= stEnableAllAxes,
			stGoToProd			:= stGoToProd,
			stHomeAxis			:= stHomeAxis,
			stMoveAxisAbsolute	:= stMoveAxisAbsolute,
			stMoveAxisRelative	:= stMoveAxisRelative,
			stOpenShutter		:= stOpenShutter,
			stReset				:= stReset,
			stTakeExposure		:= stTakeExposure,
			//outputs
			bCalibDone			=> bCalibDone,
			bMotionDone			=> bMotionDone,
			stOutCalibDone		=> stOutCalibDone,
			stOutTimer			=> stOutTimer,
			nSMState			=> nSMState);
END_CASE

]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>